<resources>
    <string name="app_name">QuieroPan</string>
    <string name="title_activity_vista_producto_detalle">VistaProductoDetalle</string>
    <string name="lista_productos">LISTA PRODUCTOS</string>
    <string name="ingrese_e_mail">Ingrese e-mail</string>
    <string name="ingrese_password">Ingrese password</string>
    <string name="ingresar">Ingresar</string>
    <string name="nuevo_usuario_registrate">¿Nuevo usuario?, Registrate</string>
    <string name="al_registrarte_indicas_que_has_le_do_y_aceptado_los_t_rminos_de_servicio">Al registrarte indicas que has leído y aceptado los Términos de Servicio.</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="ingrese_para_continuar">Ingrese para continuar</string>
    <string name="cliente">Cliente</string>
    <string name="proveedor">proveedor</string>
    <string name="segmentos">Segmentos del proveedor</string>
    <string name="panaderia">Panaderia</string>
    <string name="pasteleria">Pasteleria</string>
    <string name="amasanderia">Amasanderia</string>
    <string name="otros">Otros</string>
    <string name="razon_social">Razon Social</string>
    <string name="rut_empresa">Rut empresa</string>
    <string name="direccion_comercial">Direccion comercial</string>
    <string name="tipo_de_pago">Tipo de Pago</string>
    <string name="online">Online</string>
    <string name="efectivo">Efectivo</string>
    <string name="tipo_de_entrega">Tipo de Entrega</string>
    <string name="domicilio">Domicilio</string>
    <string name="local">Local</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="ver_ventas">Ver Ventas</string>
    <string name="ventas_realizadas">VENTAS REALIZADAS</string>
    <string name="ver_reservas">Ver Reservas</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="unidad">Unidad</string>
    <string name="kilo">Kilo</string>
    <string name="tipo_de_venta">Tipo de venta</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="descripcion_del_producto">Descripcion del producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="detalles_del_producto">Detalles del Producto</string>
    <string name="ventas">Ventas</string>
    <string name="segmento">Segmento</string>
    <string name="facturas">Facturas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_evaluacion_proveedor">Evaluacion_proveedor</string>
    <string name="title_activity_direcciones_cliente">direcciones_cliente</string>

</resources>
