<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F7"
    tools:context=".Proveedor.Perfil.PerfilProveedor">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/tolbarCliente"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/md_orange_A750"
        android:minHeight="?attr/actionBarSize">


        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_superior"
            />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botones_navegaPerfil"
        android:layout_below="@id/tolbarCliente"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#707070"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenPerfil"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/nuevo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSacarFoto"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_opciones_proveedor"
                    android:text="Sacar foto"
                    android:textSize="10sp"
                    android:textColor="@drawable/txt_boton_factura" />

                <Button
                    android:id="@+id/btnAbrirGaleria"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_opciones_proveedor"
                    android:text="Abrir galeria"
                    android:textSize="10sp"
                    android:textColor="@drawable/txt_boton_factura" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtRazonS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/razon_social" />

            <EditText
                android:id="@+id/edtRutE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/rut_empresa" />

            <EditText
                android:id="@+id/edtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_comercial" />

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Telefono Comercial" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioGrupoEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_pago" />

            <CheckBox
                android:id="@+id/checkOnline"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/online" />

            <CheckBox
                android:id="@+id/checkEfectivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/efectivo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioGrupoPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_entrega" />

            <CheckBox
                android:id="@+id/checkDomi"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/domicilio" />

            <CheckBox
                android:id="@+id/checkLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/perfilGuarda"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_opciones_proveedor"
                android:text="@string/guardar_cambios"
                android:textColor="@drawable/txt_boton_factura" />

            <Button
                android:id="@+id/perfilVolver"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_opciones_proveedor"
                android:text="Volver"
                android:textColor="@drawable/txt_boton_factura"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botones_navegaPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_inferior"
        app:itemBackground="@color/md_brown_950"
        app:itemTextColor="@color/md_orange_A750"
        app:itemIconTint="@color/md_orange_A750"
        android:background="?android:attr/windowBackground">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>