<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F7"
    tools:context=".Proveedor.Ventas.tipoVenta">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/tolbarCliente"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/md_orange_A750"
        android:minHeight="?attr/actionBarSize">


        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_superior"
            />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <LinearLayout
        android:id="@+id/fragmento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_above="@id/botones_navegaVenta"
        android:layout_below="@id/tolbarCliente"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtTitulo"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/ventas_realizadas"
            android:textColor="#4E070C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/verListaVenta"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_qpan_general"
            android:text="@string/ver_ventas"
            android:textColor="@drawable/txt_btn_opciones"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/verListaReserva"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_qpan_general"
            android:text="@string/ver_reservas"
            android:textColor="@drawable/txt_btn_opciones"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botones_navegaVenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_inferior"
        app:itemBackground="@color/md_brown_950"
        app:itemTextColor="@color/md_orange_A750"
        app:itemIconTint="@color/md_orange_A750"
        android:background="?android:attr/windowBackground">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>