<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Proveedor.homeProveedor">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/tolbarCliente"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/md_orange_A750"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/imgSalir"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="top|right"
            android:background="@drawable/ic_action_salir"  />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_superior"
            />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <FrameLayout
        android:id="@+id/fragmento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/botones_navegacion"
        android:layout_below="@id/tolbarCliente"
        android:layout_marginBottom="0dp"
        android:padding="10dp">


        <TextView
            android:id="@+id/txtProveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textColor="#4E070C"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/idFactura"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="-100dp"
            android:background="@drawable/btn_qpan_general"
            android:text="@string/facturas"
            android:textColor="@drawable/txt_btn_opciones"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idSegmento"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_qpan_general"
            android:text="@string/segmento"
            android:textColor="@drawable/txt_btn_opciones"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idVenta"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:background="@drawable/btn_qpan_general"
            android:text="@string/ventas"
            android:textColor="@drawable/txt_btn_opciones"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botones_navegacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_inferior"
        app:itemBackground="@color/md_brown_950"
        app:itemTextColor="@color/md_orange_A750"
        app:itemIconTint="@color/md_orange_A750"
        android:background="?android:attr/windowBackground">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>